# Lexis

./: .env.example  .gitignore  README.md  pyproject.toml  setup.sh  test_ai_parse.py
lexis/: __init__.py  main.py
lexis/config/: settings.py
lexis/domain/: exceptions.py  models.py
lexis/persistence/: database.py  word_repository.py
lexis/services/: ai_service.py  export_service.py  word_service.py
lexis/ui/: app.py  theme.py
lexis/ui/views/: dashboard_view.py  library_view.py  settings_view.py  word_detail_view.py
lexis/ui/widgets/: add_word_dialog.py  loading_overlay.py  tag_badge.py  word_card.py
lexis/ui/windows/: __init__.py  main_window.py
lexis/workers/: ai_worker.py
packaging/: AppRun  build_appimage.sh  lexis.desktop
packaging/aur/: .SRCINFO  PKGBUILD
packaging/aur/lexis/: config  packed-refs
packaging/aur/lexis/objects/pack/: pack-1b9f6dfa760acc6af27e5cbc1f4a98367a71caf8.idx  pack-1b9f6dfa760acc6af27e5cbc1f4a98367a71caf8.pack  pack-1b9f6dfa760acc6af27e5cbc1f4a98367a71caf8.rev
packaging/aur/pkg/lexis-git/: .BUILDINFO  .MTREE  .PKGINFO
packaging/aur/pkg/lexis-git/opt/lexis/_internal/: libQt6EglFSDeviceIntegration.so.6  libatk-1.0.so.0  libatk-bridge-2.0.so.0  libatspi.so.0  libblkid.so.1  libexpat.so.1  libfreetype.so.6  libgdk-3.so.0  libgio-2.0.so.0  libglib-2.0.so.0  libgmodule-2.0.so.0  libgobject-2.0.so.0  libgthread-2.0.so.0  libharfbuzz.so.0  libicuuc.so.78  liblzma.so.5  libmount.so.1  libmpdec.so.4  libncursesw.so.6  (+7 more)
packaging/aur/src/: lexis.desktop
tests/: conftest.py  test_repositories.py  test_word_service.py
(+2 files in other folders)
